--- a/css/style.scss
+++ b/css/style.scss
@@ -1175,6 +1175,12 @@ div.center-align{
       height: 52.5px;
       padding: 0;
     }
+    &.bittrex{
+      width: 206.5px;
+      margin: 3em calc(50% - 103px) 1em;
+      height: 75px;
+      padding: 0;
+    }
   }
   a.button{
     background: $text-blue;
@@ -1293,6 +1299,9 @@ div[class^="col-"]{
 .col-4-3{
   width: 75%;
 }
+.offset-4-1{
+  margin-left: 25%;
+}
 .sm-down-only{
   display: none;
 }
@@ -1330,6 +1339,9 @@ div[class^="col-"]{
 @media (max-width: $screen-xs-max){
   .col-full-width-xs{
     width: 100%;
+  }
+  .offset-0-xs{
+    margin-left: 0;
   }
 }
 
@@ -2014,10 +2026,30 @@ footer.mobile{
     font-family: icons;
     font-weight: normal;
     font-size: 18px;
+    min-width: 19px;
     text-decoration: none;
     transition: .2s;
+    position: relative;
+    height: 18px;
+    img{
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      height: 16px;
+      &.hover{
+        transition: .2s;
+        z-index: 1;
+        opacity: 0;
+      }
+    }
     &:hover{
       color: $text-blue;
+      img.hover{
+        opacity: 1;
+      }
     }
   }
 }
